namespace go rpc.messages
struct RpcPingMessage {
	1:i64 VerifyKey;
}